# conv

./: .gitignore  CMakeLists.txt  Options.h  README.md  conv.c
benchmark/: plot.py  results.csv  results1.csv  results2.csv  results3.csv
include/: CoreBuilder.h  OptionTypes.h  cli_utils.h  conv.h  core_builder.h  option_types.h  proc_image.h  proc_image_utils.h
src/: CoreBuilder.c  benchmark.c  cli_utils.c  conv.c  core_builder.c  proc_image.c  proc_image_utils.c  utils.c
tests/: test_parallel_methods.c
